ipc/ipdl/test/ipdl/ok/PSideImpl.ipdl
[ParentImpl=virtual, ChildImpl="mozilla::FooBarImpl"]
async protocol PSideImpl {
 parent:
  async __delete__();
};
